--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        php: [7.2, 7.3]
+        php: [7.2, 7.3, 8.0]
 
     steps:
     - uses: shivammathur/setup-php@1.5.2
