--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jpbernius/fmeat",
+    "name": "tum-dev/fmeat",
     "description": "PHP Library for accessing the FMeat API",
     "keywords": ["FMeat","TUM"],
     "homepage": "https://jpbernius.github.io/FMeat.php/",
@@ -15,7 +15,7 @@
         "php": ">=7.2.0",
         "guzzlehttp/guzzle": "~6.0",
         "php-di/php-di": "^6.0",
-        "tedivm/stash": "^0.15.1"
+        "tedivm/stash": "^0.16.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~8.2",
